--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,30 @@
 }
 
 
-
+.mt-zero {
+  margin-top: 0;
+}
+.padding-zero {
+  padding: 0 !important;
+}
+.text-elipses-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2; 
+  line-clamp: 2; 
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+ max-height: 64px; 
+}
+.text-elipses-3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3; 
+  line-clamp: 3; 
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+ max-height: 78px; 
+}
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .primary-heading {
