--- a/src/components/coursestrutureSection/coursestrutureSection.css
+++ b/src/components/coursestrutureSection/coursestrutureSection.css
@@ -396,6 +396,7 @@
         text-align: center;
         font-weight: 600;
         font-size: var(--);
+        background-color: #f3e8ea !important;
 
     }
 
