--- a/src/components/banner/bannersection.css
+++ b/src/components/banner/bannersection.css
@@ -534,7 +534,7 @@
   }
   .main {
     width: 100%;
-    background-image: url("../../../public/images/cta-bg.jpg") !important;
+    background-image: url("/images/cta-bg.jpg") !important;
     background-size: cover;
   }
 
