till logo correction

--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -336,12 +336,15 @@
   .nav-bar {
     display: flex;
     justify-content: space-between;
-    padding: 8px 0;
+    padding: 2px 0;
     align-items: center;
   }
 
+  .nav-logo {
+    width: 110px;
+  }
   .nav-head {
-    padding: 5px 5%;
+    padding: 6px 5%;
     font-family: "Montserrat", sans-serif;
   }
 
