--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -13,7 +13,9 @@
   .text {
     display: none;
   }
-
+.nav-logo {
+  width: 80px;
+}
   .nav-head {
     padding: 5px 1%;
     font-family: "Montserrat", sans-serif;
@@ -91,6 +93,10 @@
     justify-content: space-between;
     padding: 10px;
   }
+  
+.nav-logo {
+  width: 80px;
+}
   .button-search-wrapper,
   .search-icon-text,
   .fee-text,
@@ -193,6 +199,9 @@
     font-family: "Montserrat", sans-serif;
   }
 
+.nav-logo {
+  width: 80px;
+}
   .nav-bar2 {
     /* width: 80%; */
     display: flex;
@@ -254,7 +263,8 @@
   .nav-bar {
     display: flex;
     justify-content: space-between;
-    /* padding: 10px; */
+    padding: 4px 0px;
+
   }
 
   /* .hamburger-icon {
